<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".SignUpActivity">


    <ImageView
        android:id="@+id/logo"
        android:layout_width="200dp"
        android:layout_height="300dp"
        android:contentDescription="@string/logo"
        android:src="@drawable/me"
        android:layout_centerHorizontal="true"
        />

    <EditText
        android:id="@+id/signup_name"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/logo"
        android:background="@drawable/edt_background"
        android:hint="@string/Name"
        android:inputType="text"
        android:paddingStart="18dp"
        android:paddingEnd="0dp"
        android:textColorHint="#DD2C00"
        android:importantForAutofill="no" />


    <EditText
        android:id="@+id/signup_email"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/signup_name"
        android:layout_marginTop="15dp"
        android:background="@drawable/edt_background"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:paddingStart="18dp"
        android:paddingEnd="0dp"
        android:textColorHint="#DD2C00"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/signup_password"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/signup_email"
        android:layout_marginTop="15dp"
        android:background="@drawable/edt_background"
        android:hint="@string/password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:paddingStart="18dp"
        android:paddingEnd="0dp"
        android:textColorHint="#DD2C00" />



    <Button
        android:layout_marginTop="15dp"
        android:id="@+id/signup_button"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:textStyle="bold"
        android:background="@drawable/button_background"
        android:text="@string/SignUp"
        android:layout_below="@id/signup_password"
        android:layout_centerHorizontal="true"
        />
    <Button
        android:id="@+id/loginbutton"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:background="@drawable/button_background"
        android:text="@string/login"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        />
</RelativeLayout>