<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login_Activity"
    android:padding="20dp">
<ImageView
    android:id="@+id/logo"
    android:layout_width="200dp"
    android:layout_height="300dp"
    android:contentDescription="@string/logo"
    android:src="@drawable/me"
    android:layout_centerHorizontal="true"
    />

    <EditText
        android:id="@+id/login_email"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/logo"
        android:background="@drawable/edt_background"
        android:hint="@string/email"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:paddingStart="18dp"
        android:paddingEnd="0dp"
        android:textColor="#000000"
        android:textColorHint="#DD2C00"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/login_password"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/login_email"
        android:layout_marginTop="15dp"
        android:background="@drawable/edt_background"
        android:hint="@string/password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:paddingStart="18dp"
        android:paddingEnd="0dp"
        android:textColor="#000000"
        android:textColorHint="#DD2C00"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:textStyle="bold"
        android:text="@string/login"
        android:background="@drawable/button_background"
        android:layout_below="@id/login_password"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        />


    <TextView
        android:id="@+id/or"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Or"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textAlignment="center"
        android:layout_below="@id/login_button"
        android:layout_centerHorizontal="true"/>
    <Button
        android:id="@+id/signup_button"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:textStyle="bold"
        android:background="@drawable/button_background"
        android:text="@string/SignUp"
        android:layout_below="@id/or"
        android:layout_centerHorizontal="true"
        />
</RelativeLayout>